# shokuzai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/2020-05-09-050228_init/: down.sql  up.sql
migrations/2021-01-08-024708_add_pk_not_null/: down.sql  up.sql
src/: main.rs  schema.rs  tests.rs
src/models/: food.rs
src/routes/: food.rs
static/: base.tera
static/css/: mystyles.css
static/food/: index.tera
