[package]
name = "shokuzai"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2018"
repository = "https://github.com/yammmt/shokuzai.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
diesel = { version = "^1.4", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "^1.4"
log = "^0.4"
rocket = "^0.4"
rocket_contrib = { version = "^0.4", default_features = false, features = ["diesel_sqlite_pool", "serve", "tera_templates"] }
serde = "1.0.127"
serde_derive = "1.0.128"
serde_json = "^1.0"

[dev-dependencies]
parking_lot = "0.11.1"
rand = "0.8.4"
